--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Indonesian_Company",
-  "version_number": "1.0.2",
+  "version_number": "1.0.5",
   "website_url": "https://github.com/Giiiiiiiiiiiii/LethalCompany-Indonesian",
   "description": "[Localization] Mod translation for Indonesian people. Enjoy",
   "dependencies": [
@@ -8,6 +8,7 @@
     "Aavild-NewTerminal-1.4.0",
     "Clementinise-CustomSounds-2.2.0",
     "no00ob-LCSoundTool-1.4.0",
-    "x753-More_Suits-1.4.1"
+    "x753-More_Suits-1.4.1",
+    "Sligili-More_Emotes-1.3.2"
   ]
 }
